tests/dataset/tpc-ds/compiler/go/q51.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq513735640864/001/main.go:472:2: syntax error: unexpected name ny after top level declaration
